@@ -1,6 +1,7 @@
-/* -*- Mode:C++; c-file-style:"gnu"; indent-tabs-mode:nil; -*- */
+/* -*-  Mode: C++; c-file-style: "gnu"; indent-tabs-mode:nil; -*- */
 /*
  * Copyright (c) 2007 INRIA
+ * Copyright (c) 2011 The Boeing Company
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -15,10 +16,9 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * Author: Mathieu Lacage <mathieu.lacage@sophia.inria.fr>
  */
-#ifndef MAC64_ADDRESS_H
-#define MAC64_ADDRESS_H
+#ifndef MAC16_ADDRESS_H
+#define MAC16_ADDRESS_H
 
 #include <stdint.h>
 #include <ostream>
@@ -34,33 +34,30 @@ class Address;
 /**
  * \ingroup address
  *
- * \brief an EUI-64 address
- *
- * This class can contain 64 bit IEEE addresses.
+ * This class can contain 16 bit addresses.
  */
-class Mac64Address
+class Mac16Address
 {
 public:
-  Mac64Address ();
+  Mac16Address ();
   /**
-   * \param str a string representing the new Mac64Address
+   * \param str a string representing the new Mac16Address
    *
-   * The format of the string is "xx:xx:xx:xx:xx:xx"
-   */
-  Mac64Address (const char *str);
+  */
+  Mac16Address (const char *str);
 
   /**
    * \param buffer address in network order
    *
    * Copy the input address to our internal buffer.
    */
-  void CopyFrom (const uint8_t buffer[8]);
+  void CopyFrom (const uint8_t buffer[2]);
   /**
    * \param buffer address in network order
    *
    * Copy the internal address to the input buffer.
    */
-  void CopyTo (uint8_t buffer[8]) const;
+  void CopyTo (uint8_t buffer[2]) const;
   /**
    * \returns a new Address instance
    *
@@ -69,22 +66,23 @@ public:
   operator Address () const;
   /**
    * \param address a polymorphic address
-   * \returns a new Mac64Address from the polymorphic address
-   * 
+   * \returns a new Mac16Address from the polymorphic address
+   *
    * This function performs a type check and asserts if the
    * type of the input address is not compatible with an
-   * Mac64Address.
+   * Mac16Address.
    */
-  static Mac64Address ConvertFrom (const Address &address);
+  static Mac16Address ConvertFrom (const Address &address);
   /**
    * \param address address to test
    * \returns true if the address matches, false otherwise.
    */
   static bool IsMatchingType (const Address &address);
   /**
-   * Allocate a new Mac64Address.
+   * Allocate a new Mac16Address.
    */
-  static Mac64Address Allocate (void);
+  static Mac16Address Allocate (void);
+
 private:
   /**
    * \returns a new Address instance
@@ -93,37 +91,37 @@ private:
    */
   Address ConvertTo (void) const;
   static uint8_t GetType (void);
-  friend bool operator < (const Mac64Address &a, const Mac64Address &b);
-  friend bool operator == (const Mac64Address &a, const Mac64Address &b);
-  friend bool operator != (const Mac64Address &a, const Mac64Address &b);
-  friend std::istream& operator>> (std::istream& is, Mac64Address & address);
+  friend bool operator < (const Mac16Address &a, const Mac16Address &b);
+  friend bool operator == (const Mac16Address &a, const Mac16Address &b);
+  friend bool operator != (const Mac16Address &a, const Mac16Address &b);
+  friend std::istream& operator>> (std::istream& is, Mac16Address & address);
 
-  uint8_t m_address[8];
+  uint8_t m_address[2];
 };
 
 /**
- * \class ns3::Mac64AddressValue
- * \brief hold objects of type ns3::Mac64Address
+ * \class ns3::Mac16AddressValue
+ * \brief hold objects of type ns3::Mac16Address
  */
 
-ATTRIBUTE_HELPER_HEADER (Mac64Address);
+ATTRIBUTE_HELPER_HEADER (Mac16Address);
 
-inline bool operator == (const Mac64Address &a, const Mac64Address &b)
+inline bool operator == (const Mac16Address &a, const Mac16Address &b)
 {
-  return memcmp (a.m_address, b.m_address, 8) == 0;
+  return memcmp (a.m_address, b.m_address, 2) == 0;
 }
-inline bool operator != (const Mac64Address &a, const Mac64Address &b)
+inline bool operator != (const Mac16Address &a, const Mac16Address &b)
 {
-  return memcmp (a.m_address, b.m_address, 8) != 0;
+  return memcmp (a.m_address, b.m_address, 2) != 0;
 }
-inline bool operator < (const Mac64Address &a, const Mac64Address &b)
+inline bool operator < (const Mac16Address &a, const Mac16Address &b)
 {
-  return memcmp (a.m_address, b.m_address, 8) < 0;
+  return memcmp (a.m_address, b.m_address, 2) < 0;
 }
 
-std::ostream& operator<< (std::ostream& os, const Mac64Address & address);
-std::istream& operator>> (std::istream& is, Mac64Address & address);
+std::ostream& operator<< (std::ostream& os, const Mac16Address & address);
+std::istream& operator>> (std::istream& is, Mac16Address & address);
 
 } // namespace ns3
 
-#endif /* MAC64_ADDRESS_H */
+#endif /* MAC16_ADDRESS_H */
