@@ -35,6 +35,7 @@ def build(bld):
         'utils/inet6-socket-address.cc',
         'utils/ipv4-address.cc',
         'utils/ipv6-address.cc',
+        'utils/mac16-address.cc',
         'utils/mac48-address.cc',
         'utils/mac64-address.cc',
         'utils/llc-snap-header.cc',
@@ -109,6 +110,7 @@ def build(bld):
         'utils/ipv4-address.h',
         'utils/ipv6-address.h',
         'utils/llc-snap-header.h',
+        'utils/mac16-address.h',
         'utils/mac48-address.h',
         'utils/mac64-address.h',
         'utils/output-stream-wrapper.h',
